<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CounterActivity">

    <TextView
        android:id="@+id/tv_total_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:text= "@string/total_0"
        android:textSize="24sp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_people_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0 People"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:backgroundTint="#000000"
        android:text="@string/reset"
        android:textColor="#FFFFFFFF"
        app:cornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tv_total_counter"
        app:layout_constraintTop_toTopOf="@+id/tv_total_counter" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="32dp"
        app:icon="@drawable/ic_baseline_add_18"
        style="@style/IconButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btn_reduce" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_reduce"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="32dp"
        app:icon="@drawable/ic_baseline_remove_18"
        style="@style/IconButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>